--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
-
 {
-    "name": "note-taker-wk-11",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "No License",
-    "dependencies": {
-      "express": "^4.16.4",
-      "uuid": "^8.3.2"
-    }
+  "name": "note-taker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.4"
   }
+}
